// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-hitq7g {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-f2zjul {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-3u5w98 {
  color: #4a4f62;
}

.cache-3u5w98 a {
  color: inherit;
}

.cache-3u5w98 tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-3u5w98:hover {
  color: #390171;
}

.cache-3u5w98:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-3u5w98 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-3u5w98:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1odydbk {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-gdhytg {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="efhaznt5 cache-hitq7g"
  >
    <thead
      class="efhaznt4 cache-f2zjul"
    >
      <tr
        class="efhaznt3 cache-3u5w98"
      >
        <th
          class="efhaznt2 cache-1odydbk"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1odydbk"
        >
          Status
        </th>
        <th
          class="efhaznt2 cache-1odydbk"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-3u5w98"
      >
        <td
          class="efhaznt1 cache-gdhytg"
        >
          165
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Ongoing
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="efhaznt3 cache-3u5w98"
      >
        <td
          class="efhaznt1 cache-gdhytg"
        >
          56
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Resolved
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-hitq7g {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-f2zjul {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-3u5w98 {
  color: #4a4f62;
}

.cache-3u5w98 a {
  color: inherit;
}

.cache-3u5w98 tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-3u5w98:hover {
  color: #390171;
}

.cache-3u5w98:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-3u5w98 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-3u5w98:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1odydbk {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-1q4tkq6 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-1q4tkq6.cache-1q4tkq6 {
  height: 80px;
  position: relative;
}

.cache-1gn3ydk {
  position: absolute;
  top: 16px;
  left: 50%;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<table
    class="efhaznt5 cache-hitq7g"
  >
    <thead
      class="efhaznt4 cache-f2zjul"
    >
      <tr
        class="efhaznt3 cache-3u5w98"
      >
        <th
          class="efhaznt2 cache-1odydbk"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1odydbk"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-3u5w98"
      >
        <td
          class="efhaznt1 cache-1q4tkq6"
          colspan="2"
        >
          <div
            class="efhaznt0 cache-1gn3ydk"
          >
            <svg
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="20"
              aria-valuetext="20%"
              class="cache-1mntgth-ActivityIndicator"
              role="progressbar"
              style="height: 40px; width: 40px;"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#d4dae7"
                stroke-width="16"
              />
              <circle
                class="cache-wxrv4d-ActivityIndicator"
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#4f0599"
                stroke-dasharray="263.89378290154264"
                stroke-dashoffset="211.11502632123413"
                stroke-linecap="round"
                stroke-width="16"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
